--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.TXADemo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TXAMusic" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">#00D9FF</item>
         <item name="colorPrimaryVariant">#0099CC</item>
         <item name="colorOnPrimary">#FFFFFF</item>
@@ -12,7 +12,7 @@
         <item name="android:windowBackground">#1A1A2E</item>
     </style>
 
-    <style name="Theme.TXADemo.NoActionBar" parent="Theme.TXADemo">
+    <style name="Theme.TXAMusic.NoActionBar" parent="Theme.TXAMusic">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
