--- a/app/src/main/res/drawable/ic_favorite.xml
+++ b/app/src/main/res/drawable/ic_favorite.xml
@@ -2,9 +2,19 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5 2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3 19.58,3 22,5.42 22,8.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z"/>
+    android:viewportHeight="24">
+
+    <!-- Favorite heart -->
+    <path
+        android:fillColor="?attr/colorOnSurface"
+        android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5 2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3 19.58,3 22,5.42 22,8.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z" />
+
+    <!-- Letter T badge -->
+    <path
+        android:fillColor="?attr/colorPrimary"
+        android:pathData="M18,2m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0" />
+
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M16.5,3.5h3v0.8h-1v2.2h-1v-2.2h-1z" />
 </vector>
