--- a/app/src/main/res/drawable/ic_shuffle.xml
+++ b/app/src/main/res/drawable/ic_shuffle.xml
@@ -2,9 +2,19 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M10.59,9.17L5.41,4 4,5.41l5.17,5.17 1.42,-1.41zM14.5,4l2.04,2.04L4,18.59 5.41,20 17.96,7.46 20,9.5L20,4h-5.5zM14.5,20l2.04,-2.04L4,5.41 5.41,4 17.96,16.54 20,14.5L20,20h-5.5z"/>
+    android:viewportHeight="24">
+
+    <!-- Shuffle icon -->
+    <path
+        android:fillColor="?attr/colorOnSurface"
+        android:pathData="M10.59,9.17L5.41,4 4,5.41l5.17,5.17 1.42,-1.41zM14.5,4l2.04,2.04L4,18.59 5.41,20 17.96,7.46 20,9.5 20,4h-5.5zM14.5,20l2.04,-2.04L4,5.41 5.41,4 17.96,16.54 20,14.5 20,20h-5.5z" />
+
+    <!-- Letter T badge -->
+    <path
+        android:fillColor="?attr/colorPrimary"
+        android:pathData="M18,2m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0" />
+
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M16.5,3.5h3v0.8h-1v2.2h-1v-2.2h-1z" />
 </vector>
