--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -15,7 +15,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_music_note_t"
+        android:src="@drawable/ic_music_note"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -101,7 +101,7 @@
         style="@style/Widget.Material3.Button.IconButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:icon="@drawable/ic_play_t"
+        app:icon="@drawable/ic_play"
         app:iconTint="?attr/colorPrimary"
         app:layout_constraintEnd_toStartOf="@id/btnAddToPlaylist"
         app:layout_constraintTop_toTopOf="parent"
@@ -113,7 +113,7 @@
         style="@style/Widget.Material3.Button.IconButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:icon="@drawable/ic_playlist_t"
+        app:icon="@drawable/ic_playlist"
         app:iconTint="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
