--- a/app/src/main/res/layout/item_music_new.xml
+++ b/app/src/main/res/layout/item_music_new.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_music_note_t"
+                android:src="@drawable/ic_music_note"
                 tools:src="@tools:sample/avatars" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -131,7 +131,7 @@
                 style="@style/Widget.Material3.Button.IconButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:icon="@drawable/ic_play_t"
+                app:icon="@drawable/ic_play"
                 app:iconTint="?attr/colorPrimary"
                 app:rippleColor="?attr/colorPrimaryContainer" />
 
