feat: add Kotlinx Serialization and redesign TXASettingsActivity
Dependencies:
- Added kotlinx-serialization-json 1.7.3
- Added kotlin.serialization plugin

TXAHttp:
- Added Kotlinx Json config with ignoreUnknownKeys, isLenient
- Added getJson<T>() helper method for API calls

TXASettingsActivity:
- Language Selector with getAvailableLocales() API
- Check Update button (placeholder)
- App Info section (version, app set id)
- View/Clear Logs functionality

TXATranslation:
- Added getAvailableLocales() to fetch from API

Resources:
- New layout: txa_activity_settings.xml
- Icons: ic_arrow_back, ic_update, ic_description, ic_delete
- Added txa_on_surface_variant color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="txa_surface">#FF2B2930</color>
     <color name="txa_on_background">#FFE6E1E5</color>
     <color name="txa_on_surface">#FFE6E1E5</color>
+    <color name="txa_on_surface_variant">#FF938F99</color>
     <color name="txa_error">#FFF2B8B5</color>
     <color name="txa_accent">#FFD0BCFF</color>
 </resources>
