--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,9 @@
     <style name="Theme.TXAMusic.Splash" parent="Theme.TXAMusic">
         <item name="android:windowBackground">?attr/colorSurface</item>
     </style>
+
+    <style name="CircleImage" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
